<resources>
    <string name="app_name">UIKotlin</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Shop-->
    <string name="photography">Photography</string>
    <string name="computers">Computers</string>
    <string name="entertainment">Entertainment</string>
    <string name="provideo">Pro Video</string>
    <string name="mobile">Mobile</string>
    <string name="proaudio">Pro Audio</string>
    <string name="camcorders">Camcorders</string>
    <string name="lighting">Lighting</string>
    <string name="presentation">Presentation</string>
    <string name="surveillance">Surveillance</string>
    <string name="binoculars">Binoculars</string>
    <string name="useddepartment">Used Department</string>

</resources>
