<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".Fragments.ShopFragment"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/photography"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/computers"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/entertainment"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/provideo"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/mobile"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/proaudio"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/camcorders"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/lighting"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/presentation"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/surveillance"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/binoculars"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:adjustViewBounds="true"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mock1"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/useddepartment"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>